# rinasense

./: .gitignore  sdkconfig  sdkconfig.old
Apps/DHTSensor/: main.c
Apps/RinaPing/: main.c  maincopy.c
Apps/TxRxData/: main.c
Apps/perf/: main.c
Apps/rinaperf/: main.c
components/CdapProto/: CDAP.proto
components/CdapProto/include/: CDAP.pb.h
components/EFCP/: EFCP.c  dtp.c
components/Enrollment/: SerdesMsg.c
components/FlowAllocator/: FlowAllocator.c
components/IPCP/: CMakeLists.txt  IPCP.c  IpcManager.c  normalIPCP.c  num_mgr.c  pidm.c  rfifo.c
components/IPCP/include/: IPCP.h  bit_array.h  common.h  num_mgr.h  rfifo.h
components/NetworkInterface/: NetworkInterface.c
components/RINA_API/: RINA_API.c
components/Ribd/: Ribd.c
components/Rmt/: CMakeLists.txt  Rmt.c  du.c  rmt_ps_default.c
components/Rmt/include/: Rmt.h  rmt_ps_default.h
components/ShimIPCP/: ShimIPCP.c
components/ShimIPCP/include/: ShimIPCP.h
components/configRINA/include/: configRINA.h
components/configSensor/include/: configSensor.h
main/: Kconfig.projbuild  main.c
